[package]
name = "tokio-shutdown"
version = "0.1.2"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
rust-version = "1.61"
license = "MIT"
readme = "README.md"
description = "Wait for a stop signal across multiple threads"
homepage = "https://github.com/dnaka91/tokio-shutdown"
repository = "https://github.com/dnaka91/tokio-shutdown"
categories = ["asynchronous", "concurrency", "os", "web-programming"]
keywords = ["async", "futures", "signal", "tokio", "web"]
include = ["src/**/*", "CHANGELOG.md", "LICENSE", "README.md"]

[[bin]]
name = "test_fixture"
test = false

[features]
default = ["tracing"]

[dependencies]
tokio = { version = "1.20.1", features = ["macros", "rt", "signal", "sync"] }
tracing = { version = "0.1.36", optional = true }

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.25.0", default-features = false, features = ["process", "signal"] }

[target.'cfg(windows)'.dev-dependencies]
winapi = { version = "0.3.9", features = ["consoleapi", "wincon", "wincontypes"] }

[dev-dependencies]
anyhow = "1.0.62"
async-stream = "0.3.3"
axum = "0.5.15"
futures-util = "0.3.23"
tracing-subscriber = "0.3.15"
