[package]
name = "tokio-shutdown"
version = "0.1.5"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
rust-version = "1.70"
license = "MIT"
readme = "README.md"
description = "Wait for a stop signal across multiple threads"
homepage = "https://github.com/dnaka91/tokio-shutdown"
repository = "https://github.com/dnaka91/tokio-shutdown"
categories = ["asynchronous", "concurrency", "os", "web-programming"]
keywords = ["async", "futures", "signal", "tokio", "web"]
include = ["src/**/*", "CHANGELOG.md", "LICENSE", "README.md"]

[[bin]]
name = "test_fixture"
test = false

[features]
default = ["tracing"]

[dependencies]
tokio = { version = "1.42.0", features = ["macros", "rt", "signal", "sync"] }
tracing = { version = "0.1.41", optional = true }

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.29.0", default-features = false, features = ["process", "signal"] }

[target.'cfg(windows)'.dev-dependencies]
winapi = { version = "0.3.9", features = ["consoleapi", "wincon", "wincontypes"] }

[dev-dependencies]
anyhow = "1.0.94"
async-stream = "0.3.6"
axum = "0.7.9"
futures-util = "0.3.31"
tracing-subscriber = "0.3.19"
